Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-66333

QtWebEngine SEGV_MAPERR from WebChannel

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.11.0
    • 5.11
    • WebChannel, WebEngine
    • None
    • Gentoo Linux
    • 58658bc5e55155cf0087f58e6d4d35d9af50303c

    Description

      After the changes in 'Adaptations for Chromium 62' [1], 'Adaptations for Chromium 63' [2], and/or 'Test adaptations for Chromium 63' [3], the Falkon web browser shows the issue as a failure to load any URLs given directly via the address bar, and a trace such as the following can be seen in a terminal emulator (full trace attached):

      Received signal 11 SEGV_MAPERR 000000000000                                                                                            
      #0 0x7ffff39264b6 base::debug::StackTrace::StackTrace()                                                                                
      #1 0x7ffff2576790 base::debug::(anonymous namespace)::StackDumpSignalHandler()                                                         
      #2 0x7ffff392682c base::debug::(anonymous namespace)::StackDumpSignalHandler()                                                         
      #3 0x7ffff14874c0 <unknown>                                                                                                            
      #4 0x7ffff25d9909 QtWebEngineCore::WebChannelTransport::Install()                                                                      
      #5 0x7ffff25d9994 QtWebEngineCore::WebChannelIPCTransport::installWebChannel()                                                         
      #6 0x7ffff25d9180 QtWebEngineCore::WebChannelIPCTransport::OnMessageReceived()                                                         
      #7 0x7ffff55f6f43 content::RenderViewImpl::OnMessageReceived()                                                                         
      #8 0x7ffff464f36c content::ChildThreadImpl::OnMessageReceived()                                                                        
      #9 0x7ffff417b593 IPC::ChannelProxy::Context::OnDispatchMessage()                                                                      
      #10 0x7ffff39278f6 base::debug::TaskAnnotator::RunTask()          
      

      Opening for example bookmarks via the bookmark bar with a middle-click (opens in a new tab) allows for the pages to load.

      1. http://code.qt.io/cgit/qt/qtwebengine.git/commit/?h=5.11&id=448478729cfdf5098dd24a6a870bacdbcd8cf9a7
      2. http://code.qt.io/cgit/qt/qtwebengine.git/commit/?h=5.11&id=f4a8ce98bd371acf1ca1eb2c58a8403e8795a670
      3. http://code.qt.io/cgit/qt/qtwebengine.git/commit/?h=5.11&id=a7f37f48d5691c9be4a419edc34396229a1b9bb5

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-66333
          # Subject Branch Project Status CR V

          Activity

            People

              juri.valdmann Jüri Valdmann (Inactive)
              chiitoo chiitoo
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes